# gpu_bandwidth_bonanza

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: gbb.slang
src/: main.cpp
src/gbb/: Api.hpp  CudaApi.cpp  CudaApi.hpp  CudaTransfer.cu  CudaTransfer.hpp  D3D12Api.cpp  D3D12Api.hpp  D3D12Transfer.cpp  D3D12Transfer.hpp  DeviceIndex.hpp  Exception.hpp  Logger.cpp  Logger.hpp  NvmlInterface.cpp  NvmlInterface.hpp  Options.cpp  Options.hpp  ResultProcessor.cpp  ResultProcessor.hpp  SystemMemoryTransfer.cpp  SystemMemoryTransfer.hpp  Transfer.cpp  Transfer.hpp  TransferBenchmark.cpp  TransferBenchmark.hpp  UuidUtils.hpp  VulkanApi.cpp  VulkanApi.hpp  VulkanTransfer.cpp  VulkanTransfer.hpp
